feat: Add modal for displaying budgeting rules and category definitions

--- a/index.html
+++ b/index.html
@@ -21,6 +21,66 @@
       <div id="results"></div>
     </div>
     <pre id="print-output"></pre>
+
+    <!-- <button id="info-button">Information</button> -->
+
+    <!-- Modal for information -->
+    <div id="info-modal" class="modal">
+      <div class="modal-content">
+        <span class="close-button">&times;</span>
+        <h2>Information</h2>
+        <p>
+          Welcome to BudgetMaster! This tool allows you to manage your personal
+          finances by tracking your income and expenses. You can add custom
+          categories as needed, such as "Giveaway" or "Clothing".
+        </p>
+        <h3>Rules</h3>
+        <ol>
+          <li>
+            Prioritize clearing credit/loan related purchases. If a purchase is made on credit or as a loan (and it wasn't an outstanding debt before the budget was set), it should be paid off using the funds allocated to the 'Pocket Money' category. This rule helps maintain a healthy credit score and avoids the accumulation of high-interest debt.
+          </li>
+          <li>Limit purchases to a maximum of two of any single item. This rule encourages thoughtful and efficient spending by preventing over-purchasing. By limiting the quantity of items bought, you can focus on buying only what you need, reducing waste and unnecessary expenses.</li>
+          <li>
+            Reallocate unused funds from non-overlapping categories. If there's remaining money in categories that don't overlap with others (Non-Overlapping Categories - NOC), these funds should be moved to 'Savings Growth' and then replenished with new income. This rule ensures that unused funds are not wasted and contribute to your savings growth.
+          </li>
+          <li>
+            Only use 10% - 30% of the accumulated Savings Growth for the year, and only in December. This rule is designed to encourage disciplined savings and wealth accumulation. For example, if you've allocated $100 per month to Savings Growth, you'll have a minimum of $1200 in this category by the end of the year. Under this rule, you could use a maximum of $360 (30% of $1200) in December, ideally for significant purchases or investments. This approach ensures that the majority of your Savings Growth continues to contribute to your net worth.
+          </li>
+        </ol>
+        <h3>Category Definitions</h3>
+        <ul>
+          <li>
+            <strong>Hygiene (NOL):</strong>
+            Cleaning supplies, toiletries (toothpaste, soap etc)
+          </li>
+          <li>
+            <strong>Food/Meds (NOL):</strong>
+            Groceries, medication. Does not include Alcohol or Fast Food.
+          </li>
+          <li>
+            <strong>Gas/Transportation (NOL):</strong>
+            Gas/Transportation: This category covers all costs related to transportation. If you own a vehicle, consider costs such as fuel and regular maintenance. If you use public transit, calculate the average cost of your trips. By accurately estimating these expenses, you can better manage your transportation costs and potentially identify areas for savings.
+          </li>
+          <li>
+            <strong>Event/Donations:</strong>
+            Birthdays, gifts, parties, house visits, charity, religion
+          </li>
+          <li>
+            <strong>Emergency saving:</strong>
+            This category serves as a financial safety net for unexpected expenses or emergencies, such as sudden medical costs or unforeseen debts. While it can also serve as a backup for a depleted budget, it's crucial not to rely on this fund for regular expenses. Consistently maintaining this fund encourages better spending habits and provides peace of mind.
+          </li>
+          <li>
+            <strong>Savings Growth:</strong>
+            This category represents the core of your wealth-building efforts. The funds allocated here should be considered untouchable under normal circumstances. The primary purpose of this category is to accumulate savings for future investments or significant financial goals. The discipline of maintaining and growing this fund is a key step towards increasing your net worth.
+          </li>
+          <li>
+            <strong>Pocket/Wallet:</strong>
+            This category is your discretionary fund for non-essential expenses. It includes items like dining out, entertainment, personal care, and other leisure activities. While there are no restrictions on how you use this money, mindful spending in this category can contribute to overall financial health and savings growth.
+          </li>
+        </ul>
+      </div>
+    </div>
+
     <!-- Link to your JavaScript files -->
     <script src="./src/js/main.js"></script>
   </body>
