fix: index text

--- a/index.html
+++ b/index.html
@@ -50,15 +50,15 @@
         <h3>Category Definitions</h3>
         <ul>
           <li>
-            <strong>Hygiene (NOL):</strong>
+            <strong>Hygiene (NOC):</strong>
             Cleaning supplies, toiletries (toothpaste, soap etc)
           </li>
           <li>
-            <strong>Food/Meds (NOL):</strong>
+            <strong>Food/Meds (NOC):</strong>
             Groceries, medication. Does not include Alcohol or Fast Food.
           </li>
           <li>
-            <strong>Gas/Transportation (NOL):</strong>
+            <strong>Gas/Transportation (NOC):</strong>
             Gas/Transportation: This category covers all costs related to transportation. If you own a vehicle, consider costs such as fuel and regular maintenance. If you use public transit, calculate the average cost of your trips. By accurately estimating these expenses, you can better manage your transportation costs and potentially identify areas for savings.
           </li>
           <li>
