Update info button text to include 'Help'

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="header-content">
             <h1>💰 BudgetMaster</h1>
             <div class="header-buttons">
-                <button class="btn btn-secondary btn-icon" id="infoBtn" title="Information">ℹ️</button>
+                <button class="btn btn-secondary btn-icon" id="infoBtn" title="Information">ℹ️ Help</button>
             </div>
         </div>
     </div>
