Replace Calculate button with Download button

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
                 <!-- Action Buttons -->
                 <div class="button-group">
-                    <button type="button" class="btn btn-primary" id="calculateBtn">Calculate</button>
+                    <button type="button" class="btn btn-primary" id="downloadBtn">⬇️ Download</button>
                     <button type="button" class="btn btn-secondary" id="printBtn">🖨️ Print</button>
                 </div>
             </form>
