Rename stylesheet from style.css to styles.css

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
     <link rel="apple-touch-icon" href="apple-touch-icon.png" />
 
     <!-- CSS and Other Resources -->
-    <link rel="stylesheet" href="./src/css/style.css" />
+    <link rel="stylesheet" href="./src/css/styles.css" />
     <script src="./src/js/main.js" defer></script>
   </head>
   <body>
