Remove 'defer' attribute from main.js script tag

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 
     <!-- CSS and Other Resources -->
     <link rel="stylesheet" href="./src/css/styles.css" />
-    <script src="./src/js/main.js" defer></script>
+    <script src="./src/js/main.js"></script>
   </head>
   <body>
     <!-- Semantic HTML5 Structure for Better SEO -->
