Update URLs to reflect new GitHub username

--- a/index.html
+++ b/index.html
@@ -46,12 +46,12 @@
     />
     <meta
       property="og:url"
-      content="https://yourusername.github.io/budgetmaster/"
+      content="https://shaynefw.github.io/budgetmaster/"
     />
     <meta property="og:site_name" content="BudgetMaster" />
     <meta
       property="og:image"
-      content="https://yourusername.github.io/budgetmaster/og-image.png"
+      content="https://shaynefw.github.io/budgetmaster/og-image.png"
     />
     <meta
       property="og:image:alt"
@@ -70,11 +70,11 @@
     />
     <meta
       name="twitter:image"
-      content="https://yourusername.github.io/budgetmaster/og-image.png"
+      content="https://shaynefw.github.io/budgetmaster/og-image.png"
     />
 
     <!-- Canonical URL (prevent duplicate content) -->
-    <link rel="canonical" href="https://yourusername.github.io/budgetmaster/" />
+    <link rel="canonical" href="https://shaynefw.github.io/budgetmaster/" />
 
     <!-- Google Site Verification (replace with your verification token) -->
     <meta
