--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
     <!-- Title Tag (50-60 characters for optimal display) -->
     <title>BudgetMaster - Free Personal Finance Budget Tool</title>
+    <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='75' font-size='90'>💰</text></svg>">
 
     <!-- Meta Description (150-160 characters) -->
     <meta
